compiler/tests/fail/option_some_bad_type.afns
package option_some_bad_type_case;

fn main() -> i32 {
    let value: Option[i32] = Some("bad");
    return 0;
}
